# notifier

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
notifier/: notifier-cli.py  notifier.py
